* OTH#0000 Correct grunt installation steps in README
* BUG#8817 Fix width of selection input
* BUG#8840 Show scrollbar on modal
* BUG#8839 Allow link inside modal
* BUG#8810 Prevent crash on selection of m2m in form view
* BUG#8779 Use input number and toLocaleString for numeric fields
* BUG#8720 Prevent call to focus when not defined on widget
* BUG#8703 Show visible boolean extra data
* BUG#8705 Add white color for link
* BUG#8706 Remove link when line is not selected
* BUG#7226 Hide selection state
* BUG#8474 Add position and count label on one2many widget and tree view : http://hg.tryton.org/sao/rev/e19282c20d57
* BUG#7226 Refactor the editable tree process  : http://hg.tryton.org/sao/rev/cf989f7a944e/
* BUG#8474 Ensure consistent treeview rendering by using fixed table-layout : http://hg.tryton.org/sao/rev/60d4cde3ed8f

* BUG#8651 Remove right blank space
* OTH#0000 Increase line spacing of list view, add space after icon in tree views
* FEA#8643 Allow to open in new tab Many2One and Reference
* FEA#8643 Allow to edit Many2One from tree view
* BUG#7227 Fix view changes in processes

Version 4.6.3 - 2018-04-03
* Bug fixes (see mercurial logs for details)

Version 4.6.2 - 2018-03-15
* Bug fixes (see mercurial logs for details)

* FIX#8605 Fix extra-data selection readonly
* FEA#8297 iteration on theme
* FEA#8296 Reduce menu width for big screens

Version 4.6.1 - 2018-01-04
* Bug fixes (see mercurial logs for details)

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to export model and record name of Reference fields
* Re-position buttons on Binary/Image widget
* Set focus on first visible input when modal is shown
* Improve treeview headers
* Add keyboard shortcuts
* Update states of both toolbar and menu
* Improve toolbar order
* Use login details in title

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Manage help attribute on tree views
* Manage color attribute on graph view